--- a/landing.html
+++ b/landing.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- link style -->
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="./styles/style.css">
 
     <title>Easyjobs</title>
 </head>
@@ -17,12 +17,12 @@
 
         <div class="heading">
 
-            <a href="#"><img class="main_logo" src="/images/logo.png" alt=""></a>
+            <a href="#"><img class="main_logo" src="./images/logo.png" alt=""></a>
 
             <div class="Main_search">
 
                 <input type="text" id="search" class="search">
-                <img class="Se_icon" src="images/icons/search-line.svg" alt="">
+                <img class="Se_icon" src="./images/icons/search-line.svg" alt="">
 
             </div>
 
@@ -72,19 +72,22 @@
             </div>
 
             <div class="sellers">
+
                 <h1>Top Sellers</h1>
+
                 <div class="seller_card">
-                    <div class="S_profile_img"><img src="/images/Sellers/1.jpg" alt=""></div>
+                    <div class="S_profile_img">
+                        <img src="./images/Sellers/1.jpg" alt="">
+                    </div>
+
                     <div class="S_detail">
                         <span class="Sname">John Smith</span>
+
                         <div class="seller_desc">
                             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus atque cum quisquam
                                 odio dicta
                                 eius quasi voluptate repellendus nam architecto.</span>
 
-                            <div class="hirebtn">
-                                Hire Me
-                            </div>
 
                         </div>
 
@@ -93,11 +96,47 @@
                             <div class="skills">Python</div>
                             <div class="skills">Java</div>
                             <div class="skills">Flutter</div>
+                            <div class="skills">React</div>
+                        </div>
+
+
+                    </div>
+                    <div class="hirebtn">
+                        Hire Me
+                    </div>
+
+                </div>
+
+
+                <div class="seller_card">
+                    <div class="S_profile_img">
+                        <img src="./images/Sellers/2.jpeg" alt="">
+                    </div>
+
+                    <div class="S_detail">
+                        <span class="Sname">Ravindu Harshana</span>
+
+                        <div class="seller_desc">
+                            <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus atque cum quisquam
+                                odio dicta
+                                eius quasi voluptate repellendus nam architecto.</span>
+
 
                         </div>
 
 
+                        <div class="skill_list">
+                            <div class="skills">Python</div>
+                            <div class="skills">Java</div>
+                            <div class="skills">Flutter</div>
+                            <div class="skills">React</div>
+                        </div>
+                        
 
+
+                    </div>
+                    <div class="hirebtn">
+                        Hire Me
                     </div>
 
                 </div>
