--- a/footer.html
+++ b/footer.html
@@ -12,13 +12,13 @@
             <div class="Row_item">
                 <h3>Catergory</h3>
 
-                <a href="http://">Programming</a>
-                <a href="http://">Content Writing</a>
-                <a href="http://">Graphic Design</a>
-                <a href="http://">Vide Editing</a>
-                <a href="http://">Music Creation</a>
-                <a href="http://">Programming</a>
-                <a href="http://">Programming</a>
+                <a href="://">Programming</a>
+                <a href="://">Content Writing</a>
+                <a href="://">Graphic Design</a>
+                <a href="://">Vide Editing</a>
+                <a href="://">Music Creation</a>
+                <a href="://">Programming</a>
+                <a href="://">Programming</a>
 
 
             </div>
@@ -26,19 +26,19 @@
             <div class="Row_item">
                 <h3>Pages</h3>
 
-                <a href="http://">Home</a>
-                <a href="http://">Services</a>
-                <a href="http://">Profile</a>
-                <a href="http://">Help</a>
+                <a href="://">Home</a>
+                <a href="://">Services</a>
+                <a href="://">Profile</a>
+                <a href="://">Help</a>
             </div>
 
             <div class="Row_item">
                 <h3>Helps</h3>
 
-                <a href="http://">Term And Condition</a>
-                <a href="http://">Forum</a>
-                <a href="http://">Blog</a>
-                <a href="http://">About</a>
+                <a href="://">Term And Condition</a>
+                <a href="://">Forum</a>
+                <a href="://">Blog</a>
+                <a href="://">About</a>
 
                 <div class="Social_icon">
 
@@ -51,21 +51,21 @@
             <div class="Row_item">
                 <h3>Follow Us</h3>
                 <div class="Row_item iconset">
-                    <a href="http://">
+                    <a href="://">
                         <img class="sicon" src="images/icons/facebook-circle-fill.svg" alt="">
 
                     </a>
 
-                    <a href="http://">
+                    <a href="://">
                         <img class="sicon" src="images/icons/twitter-fill.svg" alt="">
 
                     </a>
 
-                    <a href="http://">
+                    <a href="://">
                         <div class="sicon"> <img src="images/icons/pinterest-fill.svg" alt=""></div>
                     </a>
 
-                    <a href="http://">
+                    <a href="://">
                         <div class="sicon"><img src="images/icons/linkedin-box-fill.svg" alt=""></div>
                     </a>
 
