--- a/employeer_profile.html
+++ b/employeer_profile.html
@@ -164,13 +164,13 @@
         <div class="Row_item">
           <h3>Catergory</h3>
 
-          <a href=":">Programming</a>
-          <a href=":">Content Writing</a>
-          <a href=":">Graphic Design</a>
-          <a href=":">Vide Editing</a>
-          <a href=":">Music Creation</a>
-          <a href=":">Programming</a>
-          <a href=":">Programming</a>
+          <a href="./login&category final/Information Technology.html">Programming</a>
+          <a href="./login&category final/category.html">Content Writing</a>
+          <a href="./login&category final/Graphics and design.html">Graphic Design</a>
+          <a href="./login&category final/Graphics and design.html">Vide Editing</a>
+          <a href="./login&category final/category.html">Music Creation</a>
+          <a href="./login&category final/Information Technology.html">Programming</a>
+          <a href="./login&category final/Information Technology.html">Programming</a>
 
 
         </div>
@@ -261,7 +261,7 @@
 
   </section>
 
-  <script src="s://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script>
     var text = new Typed(".typingtext", {
       strings: [
