--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,16 @@
                 <img class="Se_icon" src="./images/icons/search-line.svg" alt="">
 
             </div>
+            
+            <div class="navbar">
+                <a href="Home.html"><span class="nav">Home</span></a>
+                <a href="employeer_profile.html"><span class="nav">Employeers</span></a>
+                <a href="./login&category final/category.html"><span class="nav">Catergory</span></a>
+                <a href="./login&category final/about.html"><span class="nav">About</span></a>
 
+            </div>
+
+            
 
             <div class="dp">
                 <a href="./login&category final/login.html">
